# fade

./: LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  brightness.rs  events.rs  gamma.rs  log.rs  main.rs  monitors.rs  overlay.rs  utils.rs
src/components/: Slider.tsx
