[package]
name = "fade"
version = "0.1.0"
description = "Increase or Decrease brightness on windows"
authors = ["@tribhuwan-kumar"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4.17"
serde_json = "1"
anyhow = "1.0.97"
tracing = "0.1.41"
futures = "0.3.31"
tracing-appender = "0.2.3"
tauri-plugin-opener = "2.5.0"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.8.4 ", features = ["tray-icon"] }
tokio = { version = "1.47.1", features = ["time"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
windows = { version = "0.61.3", features = [
  "Win32_Security",
  "Win32_System_IO",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
  "Win32_UI_ColorSystem",
  "Win32_Storage_FileSystem",
  "Win32_UI_WindowsAndMessaging",
] }
